@@ -53,8 +53,13 @@ git checkout master
 When done, you may build the codebase via the following command:
 
 ```bash
-./gradlew build install --parallel -x test -x javadoc -x check --build-cache --configure-on-demand
+./gradlew build --parallel -x test -x javadoc -x check --build-cache --configure-on-demand
 ```
+
+<div class="alert alert-info"><strong>Gradle Wrapper & Gum</strong>
+<p>Rather than using the Gradle Wrapper directly, you
+might want to <a href="https://github.com/kordamp/gm">use Gum</a>, which is able to 
+auto-detect the location of the Gradle Wrapper anywhere in the project structure.</p></div>
 
 The following commandline boolean flags are supported by the build and can be passed in form of system properties via `-D`:
 
@@ -62,7 +67,7 @@ The following commandline boolean flags are supported by the build and can be pa
 |-----------------------------------+---------------------------------------------------------------------------+
 | `enableRemoteDebugging`           | Allows for remote debugging via a pre-defined port (i.e. `5000`).
 | `remoteDebuggingSuspend`          | Set to `true` to suspend JVM remote debugging until the debugger attaches to the running session.
-| `showStandardStreams`             | Let the build output logs that are sent to the standard streams. (i.e. console, etc)
+| `verbose`                         | Control the logging level for tests and output additional data about passing/failing/skipped tests.
 | `skipCheckstyle`                  | Skip running Checkstyle checks.
 | `skipSpotbugs`                    | Skip running Spotbugs checks.
 | `skipVersionConflict`             | If a dependency conflict is found, use the latest version rather than failing the build.
@@ -94,6 +99,10 @@ The following IDEA settings for Gradle may also be useful:
 
 ![image](https://user-images.githubusercontent.com/1205228/71612835-5ea5ed80-2bbc-11ea-8f49-9746dc2b3a70.png)
 
+<div class="alert alert-info"><p>
+You should always use the latest version of the Intellij IDEA.
+</p></div>
+
 Additionally, you may need to customize the VM settings to ensure the development environment can load and index the codebase:
 
 ```bash
@@ -106,11 +115,6 @@ Additionally, you may need to customize the VM settings to ensure the developmen
 -XX:ReservedCodeCacheSize=240m
 -XX:+UseCompressedOops
 -XX:SoftRefLRUPolicyMSPerMB=50
-
--XX:+UseParNewGC
--XX:ParallelGCThreads=4
--XX:+UseConcMarkSweepGC
--XX:ConcGCThreads=4
 
 -XX:+CMSClassUnloadingEnabled
 -XX:+CMSParallelRemarkEnabled
@@ -130,8 +134,11 @@ Additionally, you may need to customize the VM settings to ensure the developmen
 -Dsun.io.useCanonCaches=false
 -Djsse.enableSNIExtension=true
 -ea
--Xverify:none
 ```
+
+If you're using OpenJDK 11 or later, you may find the above VM options do not work. The key point for making IntelliJ IDEA 
+handle the project nicely is to give it lots of memory (either by specifying the `-Xmx8g` VM options or in the IDE 
+menu `Help -> Change Memory Settings`).
 
 #### Plugins
 
@@ -141,7 +148,8 @@ The following plugins may prove useful during development:
 - [FindBugs](https://plugins.jetbrains.com/plugin/3847-findbugs-idea)
 - [Lombok](https://github.com/mplushnikov/lombok-intellij-plugin)
 
-Once you have installed the Lombok plugin, you will also need to ensure Annotation Processing is turned on. You may need to restart IDEA in order for changes to take full effect.
+Once you have installed the Lombok plugin, you will also need to ensure *Annotation Processing* is turned on. You may 
+need to restart IDEA in order for changes to take full effect.
 
 ![image](https://user-images.githubusercontent.com/1205228/35231112-287f625a-ffad-11e7-8c1a-af23ff33918d.png)
 
@@ -156,7 +164,7 @@ should look something like the below screenshot:
 It is possible to run the CAS web application directly from IDEA by 
 creating a *Run Configuration* that roughly matches the following screenshot:
 
-![image](https://user-images.githubusercontent.com/1205228/41805461-9ea25b76-765f-11e8-9a36-fa82d286cf09.png)
+[image](https://user-images.githubusercontent.com/1205228/41805461-9ea25b76-765f-11e8-9a36-fa82d286cf09.png)
 
 This setup allows the developer to run the CAS web 
 application via an [embedded servlet container](Build-Process.html#embedded-containers).
@@ -185,7 +193,8 @@ Please [see this page](Test-Process.html) to learn more about the testing proces
 ## Embedded Containers
 
 The CAS project comes with a number of built-in modules that are pre-configured with embedded servlet containers such as 
-Apache Tomcat, Jetty, etc for the server web application, the management web application and others. These modules are found in the `webapp` folder of the CAS project.
+Apache Tomcat, Jetty, etc for the server web application, the management web application 
+and others. These modules are found in the `webapp` folder of the CAS project.
 
 ### Configure SSL
 
@@ -260,7 +269,7 @@ The response will look something like this:
 
 ```bash
 ...
-2017-05-26 19:10:46,470 INFO [org.apereo.cas.web.CasWebApplication] - <Started CasWebApplication in 21.893 seconds (JVM running for 36.888)>
+INFO [org.apereo.cas.web.CasWebApplication] - <Started CasWebApplication in 21.893 seconds (JVM running for 36.888)>
 ...
 ```
 
@@ -296,16 +305,30 @@ installing dependencies from the project for use in the cas-overlay.
 # Adjust the cas alias to the location of cas project folder
 alias cas='cd ~/Workspace/cas'
 
-# test cas directly from project rather than using the CAS overlay
-alias bc='clear; cas; cd webapp/cas-server-webapp-tomcat ; \
-    ../../gradlew build bootRun --configure-on-demand --build-cache --parallel \
-    -x test -x javadoc -x check -DremoteDebuggingSuspend=false \
-    -DenableRemoteDebugging=true --stacktrace \
-    -DskipNestedConfigMetadataGen=true'
+# Run CAS with module selections
+# $> bc oidc,gauth
+function bc() {
+  clear
+  cas
+  cd webapp/cas-server-webapp-tomcat
+  casmodules="$1"
+  if [ ! -z "$casmodules" ] ; then
+    echo "Loading CAS Modules: ${casmodules}"
+  fi
 
-# Install jars for use with a CAS overlay project
+  # Could also use: gm -b ./build.gradle
+  ../../gradlew build bootRun \
+    --configure-on-demand --build-cache \
+    --parallel -x test -x javadoc -x check -DenableRemoteDebugging=true \
+    --stacktrace -DskipNestedConfigMetadataGen=true \
+    -DremoteDebuggingSuspend=false \
+    -PcasModules=${casmodules}
+}
+
+# Install JARs/WARs for use with a CAS overlay project
 alias bci='clear; cas; \
-    ./gradlew clean build publishToMavenLocal --configure-on-demand \
+    ./gradlew clean build publishToMavenLocal \ 
+    --configure-on-demand \
     --build-cache --parallel \
     -x test -x javadoc -x check --stacktrace \
     -DskipNestedConfigMetadataGen=true \
